# Data_Quality_check

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: column_config.yaml
notebooks/: newvalidations.ipynb  validations.ipynb
services/: advanced_analytics_service.py  core_quality_service.py  information_quality_service.py  precision_quality_service.py  semantic_quality_service.py  statistical_quality_service.py  structural_quality_service.py  temporal_quality_service.py
